[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "A FastAPI project with Poetry"
authors = ["MASKURI RAMESH <maskuriramesh4u@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
sqlmodel = "^0.0.8"
mysql-connector-python = "^8.0.33"
passlib = "^1.7.4"
python-dotenv = "^1.0.0"
redis = "^5.2.0"
pymysql = "^1.1.1"
python-jose = "^3.3.0"
mysqlclient = "^2.2.6"
psycopg2-binary = "^2.9.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
